# cert-manager-routes-controller

./: Cargo.toml  Dockerfile  LICENSE  README.md  VERSION  cert-manager-routes-controller-0.9.9-beta.12.tgz  cert-manager-routes-controller-0.9.9-beta.15.tgz  cert-manager-routes-controller-0.9.9-beta.8.tgz  cert-manager-routes-controller-1.0.0.tgz  cert-manager-routes-controller-1.0.1.tgz  cert-manager-routes-controller-1.0.2.tgz  cert-manager-routes-controller-1.0.4.tgz  cert-manager-routes-controller-1.0.5.tgz  cert-manager-routes-controller-1.1.0.tgz  cert-manager-routes-controller-1.2.0.tgz  cert-manager-routes-controller-1.2.1.tgz  cert-manager-routes-controller-1.2.2.tgz  cert-manager-routes-controller-1.2.3.tgz  cert-manager-routes-controller-1.3.0.tgz  index.yaml
.github/workflows/: release.yml
charts/: Chart.yaml  values.yaml
charts/templates/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  hpa.yaml  serviceaccount.yaml
ctrl/: Cargo.toml
ctrl/src/: certificate.rs  crd.rs  events.rs  main.rs  manage_route.rs  route.rs  tools.rs  types.rs
ctrl/src/crd/: certificate.rs  route.rs
src/: certificate.rs  main.rs  route.rs  tools.rs
src/crd/: certificate.rs
