[package]
name = "cert-manager-routes-controller"
version = "1.2.1"
edition = "2021"

[dependencies]
chrono = "0.4.26"
futures = "0.3.28"
k8s-openapi = { version = "0.18.0", features = ["v1_25"] }
kube = { version = "0.84.0", features = ["runtime", "client", "derive"] }
schemars = "0.8.12"
serde = "1.0.171"
serde_json = "1.0.100"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
